winter_league/static/css/bootstrap.css
/* ... */
table.results th, table.results td {
    text-align: center;
    vertical-align: middle;
}
.toast {
    position: fixed;
    bottom: 10px;
    right: 10px;
    z-index: 1;
}

table.table.user thead tr, table.table.user td {
    text-align: center !important;
    vertical-align: middle;
}

.form-signin {
  width: 100%;
  max-width: 330px;
  padding: 15px;
  margin: 0 auto;
}

.user.table td:first-child {
    text-decoration:underline;
}
.user.table td:first-child:hover {
    cursor: pointer;
}
html {
  position: relative;
  min-height: 100%;
}

body {
  margin-bottom: 70px; /* Margin bottom by footer height */
}

.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 60px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
  background-color: #f5f5f5;
}

.round_input_field {
    border-radius: .25rem !important;
}


/*# sourceMappingURL=bootstrap.css.map */

